Console models added, VM improved, minor other additions

--- a/Brainf_ck-sharp.UWP/App.xaml
+++ b/Brainf_ck-sharp.UWP/App.xaml
@@ -2,7 +2,15 @@
     x:Class="Brainf_ck_sharp.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Brainf_ck_sharp.UWP"
     RequestedTheme="Dark">
+
+    <!--Styles-->
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/TextStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
