--- a/Brainf_ck-sharp.UWP/App.xaml
+++ b/Brainf_ck-sharp.UWP/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="Brainf_ck_sharp.UWP.App"
+    x:Class="Brainf_ck_sharp_UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     RequestedTheme="Dark">
@@ -9,6 +9,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/TextStyles.xaml"/>
+                <ResourceDictionary Source="Styles/ButtonStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
