--- a/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
@@ -2,5 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    
+    <!--Font icon-->
+    <Style TargetType="TextBlock" x:Key="FontIconTextBlockStyle">
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontFamily" Value="Segoe MDL2 Assets"/>
+        <Setter Property="FontSize" Value="16"/>
+    </Style>
 </ResourceDictionary>
