UI tweaks, keyboard speed improved, minor bug fixes

--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -99,7 +99,8 @@
             <CommandBar.PrimaryCommands>
                 <AppBarButton 
                     Label="Play"
-                    Icon="Play"/>
+                    Icon="Play"
+                    Click="PlayButton_Click"/>
             </CommandBar.PrimaryCommands>
         </CommandBar>
 
