--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -53,7 +53,7 @@
             <!--Header with pivot buttons-->
             <header:HeaderControl
                 Grid.Row="1"
-                SelectedIndezChanged="HeaderControl_OnSelectedIndezChanged"/>
+                SelectedHeaderIndex="{x:Bind PivotControl.SelectedIndex, Mode=TwoWay}"/>
         </Grid>
         
         <!--Console and IDE-->
