--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -119,18 +119,25 @@
                     Click="{x:Bind RequestClearConsoleLine}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Undo"
-                    Icon="&#xE10E;"
+                    Icon="&#xE750;"
                     x:Uid="Undo"
                     IsEnabled="{x:Bind ViewModel.UndoAvailable, Mode=OneWay, FallbackValue=False}"
                     DefaultButton="True"
                     Click="{x:Bind RequestUndoConsoleCharacter}"/>
             </customCommandBar:CommandBarWithButtonsAnimations.PrimaryCommands>
             <customCommandBar:CommandBarWithButtonsAnimations.SecondaryCommands>
-                <AppBarButton
+                <customCommandBar:CustomCommandBarButton
                     Label="Restart"
                     x:Uid="Restart"
+                    Icon="&#xE117;"
                     IsEnabled="{x:Bind ViewModel.RestartAvailable, Mode=OneWay, FallbackValue=False}"
                     Click="{x:Bind RequestRestartConsole}"/>
+                <customCommandBar:CustomCommandBarButton
+                    Label="Clear screen"
+                    x:Uid="Clrscr"
+                    Icon="&#xEA99;"
+                    IsEnabled="{x:Bind ViewModel.RestartAvailable, Mode=OneWay, FallbackValue=False}"
+                    Click="{x:Bind RequestClearScreen}"/>
             </customCommandBar:CommandBarWithButtonsAnimations.SecondaryCommands>
         </customCommandBar:CommandBarWithButtonsAnimations>
 
